# corda-rpc

./: Cargo.toml  LICENSE  README.md  codecov.yml
.github/workflows/: rust.yml
corda-rpc/: Cargo.toml
corda-rpc/examples/: network-map-snapshot.rs
corda-rpc/src/: client.rs  lib.rs  network_map_snapshot.rs  tests.rs  types.rs
oasis-amqp/: Cargo.toml
oasis-amqp-derive/: Cargo.toml
oasis-amqp-derive/src/: lib.rs
oasis-amqp-macros/: Cargo.toml
oasis-amqp-macros/src/: lib.rs
oasis-amqp/examples/: connect.rs
oasis-amqp/src/: amqp.rs  de.rs  lib.rs  proto.rs  sasl.rs  ser.rs
oasis-amqp/tests/: basic.rs
