[package]
name = "corda-rpc"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan.ochtman@ing.com>"]
edition = "2018"
description = "Toolkit for doing Corda RPC from Rust"
documentation = "https://docs.rs/corda-rpc"
repository = "https://github.com/djc/corda-rpc"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"

[dependencies]
futures = "0.3"
oasis-amqp = { version = "0.1", path = "../oasis-amqp" }
oasis-amqp-macros = { version = "0.1", path = "../oasis-amqp-macros" }
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_bytes = { version = "0.11" }
tokio = { version = "0.2", features = ["dns", "macros", "rt-threaded", "tcp"] }
tokio-util = { version = "0.3", features = ["codec"] }
uuid = { version = "0.8", features = ["v4"] }
