[package]
name = "corda-rpc"
version = "0.2.0"
authors = ["Dirkjan Ochtman <dirkjan.ochtman@ing.com>"]
edition = "2018"
description = "Toolkit for doing Corda RPC from Rust"
documentation = "https://docs.rs/corda-rpc"
repository = "https://github.com/djc/corda-rpc"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"

[dependencies]
oasis-amqp = { version = "0.3", path = "../oasis-amqp" }
oasis-amqp-macros = { version = "0.2", path = "../oasis-amqp-macros" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bytes = { version = "0.11.4" }
tokio = { version = "1", features = ["net"] }
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
structopt = "0.3.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
