[package]
name = "oasis-amqp-macros"
version = "0.2.0"
authors = ["Dirkjan Ochtman <dirkjan.ochtman@ing.com>"]
edition = "2018"
description = "Helper macros for AMQP 1.0 type definitions"
documentation = "https://docs.rs/oasis-amqp-derive"
repository = "https://github.com/djc/corda-rpc"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
