[package]
name = "oasis-amqp"
version = "0.1.0"
authors = ["Dirkjan Ochtman <dirkjan.ochtman@ing.com>"]
edition = "2018"
description = "Asynchronous AMQP 1.0 protocol handling"
documentation = "https://docs.rs/oasis-amqp"
repository = "https://github.com/djc/corda-rpc"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"

[dependencies]
bytes = "0.5"
err-derive = "0.2"
oasis-amqp-macros = { version = "0.1", path = "../oasis-amqp-macros" }
serde = { version = "1", features = ["derive"] }
serde_bytes = { version = "0.11" }
tokio-util = { version = "0.2", features = ["codec"] }
