[package]
name = "oasis-amqp"
version = "0.3.0"
authors = ["Dirkjan Ochtman <dirkjan.ochtman@ing.com>"]
edition = "2018"
description = "Asynchronous AMQP 1.0 protocol handling"
documentation = "https://docs.rs/oasis-amqp"
repository = "https://github.com/djc/corda-rpc"
license = "Apache-2.0"
workspace = ".."
readme = "../README.md"

[dependencies]
bytes = "1"
futures = "0.3"
oasis-amqp-macros = { version = "0.2", path = "../oasis-amqp-macros" }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.4"
thiserror = "1.0.21"
tokio = { version = "1", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }
